[package]
name = "rbassoon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "^4"
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
env_logger = "^0.10"
derive_more = "^0.99"
strum_macros = "^0.25"
tokio = { version = "^1.31", features = ["macros", "rt-multi-thread"] }
reqwest = "^0.11"
