[package]
name = "spacetimerepo"
version = "0.1.0"
edition = "2021"

[lib]
name = "spacetimerepo"
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "^0.6"
log = "^0.4"
serde = {version = "^1", features = ["derive"]}
serde_json = "^1"
env_logger = "^0.10"
derive_more = "^0.99"
strum_macros = "^0.25"
reqwest = "^0.11"
